--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,8 @@
 		},
 		"ghcr.io/devcontainers-contrib/features/aws-cdk:2": {},
 		"ghcr.io/devcontainers-contrib/features/poetry:2": {}
-	}
+	},
+	"mounts": [
+        "source=/home/devpod/.aws,target=/home/vscode/.aws,type=bind,consistency=cached"
+    ]
 }
